# epox

./: .editorconfig  .taplo.toml  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  build.rs
.config/: nextest.toml
.github/workflows/: ci.yml
examples/: channel.rs  futures-serial.rs  readline.rs  select-sigint-readline.rs  serial.rs  sigint.rs  tasks.rs  timeout.rs  timer.rs  yield.rs
src/: executor.rs  fd.rs  futures.rs  lib.rs  queue.rs  signal.rs  task.rs  thread.rs  time.rs  timer.rs  yield_task.rs
src/fd/: futures_impls.rs
tests/: block_on.rs  channel.rs  shutdown.rs  tasks.rs  time.rs  timeout.rs  yield.rs
