[package]
name = "epox"
version = "0.1.0"
edition = "2024"

[features]
default = []
nightly = []

[dependencies]
nix = { version = "0.30", features = ["event", "fs", "signal", "time"] }
futures-io = "0.3"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
serialport = "4"
clap = { version = "4", features = ["derive"] }
futures-lite = "2"
futures = "0"

[lints.rust]
unreachable-pub = "warn"
unnameable-types = "warn"

[lints.clippy]
nursery = "warn"
pedantic = "warn"

cognitive_complexity = { level = "allow", priority = 1 }
future_not_send = { level = "allow", priority = 1 }
new_without_default = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }
suboptimal_flops = { level = "allow", priority = 1 }
tuple_array_conversions = { level = "allow", priority = 1 }

cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
if_not_else = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
match_wildcard_for_single_variants = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
redundant_closure = { level = "allow", priority = 1 }
redundant_closure_for_method_calls = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
unused_self = { level = "allow", priority = 1 }
